This commit address the following points:
- Update the extractUsage() to got the tokens from Claude json stream using result.modelUsage
- Breakdon the Tokens per mdodel used: haiku, opus
- Format the cost results using String.format(Locale.US,...)
- Remove from the review the extractReviewUsage() as non relevant

Signed-off-by: Charles Moulliard <cmoulliard@ibm.com>